--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -4,7 +4,7 @@ div#form-container {
 
     form {
         display: inline-block;
-        width: 70%;
+        width: 500px;
     
         .input-row {
             padding: 20px 0;
