--- a/src/components/Stepper/Stepper.scss
+++ b/src/components/Stepper/Stepper.scss
@@ -1,50 +1,17 @@
-div#form-container {
-    display: flex;
-    justify-content: space-between;
+div#aspect-rows-container {
+    padding: 25px 0;
 
-    form {
-        display: inline-block;
-        width: 500px;
+    div.button-row {
+        display: flex;
+        justify-content: space-evenly;
     
-        .input-row {
-            padding: 20px 0;
-            display: flex;
-            justify-content: left;
-
-            div.text-input {
-                width: 257px;
-
-                p {
-                    position: absolute;
-                    top: 55px;
-                    margin-left: 2px;
-                }
-            }
-    
-            div.number-input {
-                max-width: 188px;
-                margin-left: 15px;
-
-                p {
-                    position: absolute;
-                    top: 55px;
-                    width: 200px;
-                    line-height: 1.2;
-                    margin-left: 2px;
-                }
-            }
-
-            button.remove-row-btn {
-                height: 35px;
-                width: 35px;
-                margin-top: 10px;
-                margin-left: 5px;
-            }
+        &:not(:first-child):not(:last-child) {
+            margin: 20px 0;
         }
-
-        button#add-category-btn {
-            margin: 15px auto 0;
-            display: block;
+    
+        button.aspect-button {
+            width: 321px;
+            
         }
     }
 }
