dealing with life 'categories' not 'aspects'

--- a/src/components/Stepper/Stepper.scss
+++ b/src/components/Stepper/Stepper.scss
@@ -2,7 +2,7 @@ h2, h3 {
     text-align: center;
 }
 
-div#wol-aspect-rows-container {
+div#wol-category-rows-container {
     padding: 25px 0;
 
     div.button-row {
@@ -13,7 +13,7 @@ div#wol-aspect-rows-container {
             margin: 20px 0;
         }
     
-        button.aspect-button {
+        button.category-button {
             width: 321px;
             min-height: 60px;
             
