--- a/src/components/Stepper/PolarAreaChart/PolarAreaChart.scss
+++ b/src/components/Stepper/PolarAreaChart/PolarAreaChart.scss
@@ -1,17 +1,73 @@
 @import '../../../styles/variables.scss';
 
-#chart-container {
-    width: 500px;
-    height: 500px;
-    position: relative;
-    display: block;
+$small-viewport: 720px;
 
-    h3 {
-        position: absolute;
-        max-width: 260px;
-        text-align: center;
-        top: 25%;
-        left: 25%;
-        color: $primary-blue;
+div#wol-chart-main-container {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 20px;
+
+    @media(max-width: $small-viewport) {
+        flex-direction: column-reverse;
+    }
+
+    div.chart-sub-container {
+        width: 50%;
+
+        @media(max-width: $small-viewport) {
+            width: 100%;
+        }
+    }
+
+    div#wol-chart-labels-container {
+        padding-right: 80px;
+
+        @media(max-width: $small-viewport) {
+            padding: 0;
+        }
+
+        div.label-container {
+            margin: 20px 0;
+            display: flex;
+            justify-content: flex-end;
+
+            @media(max-width: $small-viewport) {
+                justify-content: center;
+                margin: 15px 20px;
+            }
+
+            span.label-rating {
+                width: 60px;
+                height: 60px;
+                border-radius: 30px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 20px;
+            }
+
+            span.label-name {
+                min-width: 210px;
+                display: flex;
+                align-items: center;
+                margin-left: 10px;
+            }
+        }
+    }
+
+    div#wol-chart-container {
+        position: relative;
+        display: block;
+        display: flex;
+        justify-content: left;
+        align-items: center;
+
+        canvas {
+            max-width: 500px;
+        }
+
+        @media(max-width: $small-viewport) {
+            justify-content: center;
+        }
     }
 }
