addressing styling discrepancies that came up after deploying

--- a/src/components/Stepper/Stepper.scss
+++ b/src/components/Stepper/Stepper.scss
@@ -1,5 +1,6 @@
-h2, h3 {
+h2#wol-app-title, h3#wol-call-to-action {
     text-align: center;
+    color: black;
 }
 
 div#wol-category-rows-container {
