--- a/src/components/Stepper/PolarAreaChart/PolarAreaChart.scss
+++ b/src/components/Stepper/PolarAreaChart/PolarAreaChart.scss
@@ -44,6 +44,7 @@ div#wol-main-chart-container {
                 align-items: center;
                 justify-content: center;
                 font-size: 20px;
+                color: black;
             }
 
             span.label-name {
@@ -51,6 +52,8 @@ div#wol-main-chart-container {
                 display: flex;
                 align-items: center;
                 margin-left: 10px;
+                color: black;
+                text-align: left;
             }
         }
     }
