small styling change and killing the print/save feature for now

--- a/src/components/Stepper/StepperPage/StepperPage.scss
+++ b/src/components/Stepper/StepperPage/StepperPage.scss
@@ -56,7 +56,7 @@ div#wol-rating-button-container {
                 min-height: 40px;
                 border-radius: 20px;
                 font-size: 12px;
-                margin: 5px 5px;
+                margin: 4px;
             }
         }
 
